# leropilot

./: .gitignore  .pre-commit-config.yaml  COMMERCIAL.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  fix_env_status.py  package-lock.json  package.json  pyproject.toml  reproduce_install.py  reproduce_issue.py  test_installation.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: auto-merge-label.yml  build-matrix.yml  build.yml  ci.yml  cla.yml  publish-release.yml  sync-wiki.yml
cla/: CLA.md
docs/: environment-management-ai-guide.md  ffmpeg_installation_strategy.md  git_installation_strategy.md  gui_sudo_password_handling.md  lerobot_extras.yaml  lerobot_version_research.md  lerobot_versions.yaml  tailwind-v4-reference.md
docs/for-ai-reference/: environment-management-reference.md  lerobot_extras.yaml  lerobot_versions.yaml  react-strict-mode-and-idempotency.md  settings-config-reference.md  web-terminal-implementation.md
docs/spec/: environment-creation-complete-spec.md  hardware_management.md  (+6 more)
electron/: builder.json  main.js  package-lock.json  package.json  preload.js
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  lint_output.txt  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
scripts/: build-electron.py  build.py  ci_size_check.py  debug_generate_steps.py  debug_verify.py  dev-electron.sh  run-lint.sh  run-tests.sh  start-vite-if-needed.bat  start-vite-if-needed.sh  test_damiao_hardware.py  test_winpty.py  test_winpty_collection.py  verify_hardware_api.py
spec/: system-design.md
tests/: manual_test_idempotency.py  test_add_device_validation.py  test_cameras_api.py  test_damiao_id_mapping.py  test_damiao_motor_bus_idmap.py  test_damiao_parameters.py  test_damiao_scan_recv_mapping.py  test_damiao_tables.py  test_discovery.py  test_discovery_add_flow.py  test_dynamixel_driver.py  test_dynamixel_tables.py  test_feetech_driver.py  test_feetech_tables.py  test_generate_steps.py  test_git_tools_i18n.py  test_hardware_i18n.py  test_hopejr_hand_drive_mode.py  test_i18n_categories.py  test_i18n_extras.py  test_i18n_helpers.py  test_i18n_translate.py  test_i18n_translate_flat.py  test_koch_follower_drive_mode.py  test_koch_leader_drive_mode.py  test_models_hardware.py  test_motor_bus.py  test_motor_bus_architecture.py  test_motor_bus_types.py  test_motor_service_damiao_lookup.py  test_motor_service_dynamixel_lookup.py  test_motor_service_dynamixel_spec_lookup.py  test_motor_service_spec_lookup.py  test_motor_service_tables_lookup.py  test_motor_spec_and_discover.py  test_motor_util.py  test_motors_udev.py  test_omx_drive_mode.py  test_preset_config.py  test_resources_and_udev.py  (+23 more)
(+264 files in other folders)
