[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leropilot"
version = "0.1.0"
description = "LeRoPilot - Local development environment manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.11.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
leropilot = ["static/**/*"]
